# DentistBot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  env.example  main.py  pyproject.toml  requirements.txt  test_database.py  test_scheduler.py  test_yclients.py  yclients_client.py
alembic/: env.py
alembic/versions/: 1b399f805f43_initial_tables.py
src/: config.py
src/bot/: main.py
src/bot/dialogs/: registration.py  states.py
src/bot/handlers/: callbacks.py  commands.py
src/bot/keyboards/: inline.py
src/database/: crud.py  database.py  models.py
src/services/: admin_report.py  notifications.py  scheduler.py  yclients.py
src/utils/: record_helpers.py  validators.py
